--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="resources/css/style.css">
         <link rel="stylesheet" type="text/css" href="resources/css/queries.css">
         <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
         <title>Nicolai Swanepoel - Portfolio</title>
     </head>
     <body>
@@ -41,36 +42,118 @@
             </div>
             </div>
         </header>
-        <section class="showcase">
-        <div class="projects-grid">
-            <h3>My Projects</h3>
-            <div class="projects">
-                <div class="item1">
-                    <div class="item-desc">
-                        <a href="http://www.shipsman.com.na"><img src="resources/img/project-shipsman.com.jpg" alt="shipsman.com"></a>
-                        <p class="project-title">Ships Management Services</p>
-                        <p class="project-desc">This project was completed for Ships Management Services of Walvis-Bay, utilizing the WordPress CMS platform. This was my first experience using WordPress to build a project. </p>
+          <section class="section-cities" id="cities">
+            <div class="row">
+                <h2>My previous projects</h2>
+            </div>
+            <div class="row js--wp-3">
+                <div class="col span-1-of-3 box">
+                    <img src="resources/img/project-shipsman.com.jpg" alt="shipsman">
+                    <h3>Ships Services</h3>
+                    <div class="city-feature">
+                        <i class="icon ion-logo-wordpress"></i>
+                        WordPress Project
+                    </div>
+                    <div class="city-feature">
+                        <i class="icon ion-logo-html5"></i>
+                        HTML/CSS/JS
+                    </div>
+                    <div class="city-feature">
+                        <i class="icon ion-md-link"></i>
+                        <a class="icon-link" href="http://www.shipsman.com.na">shipsman.com</a>
                     </div>
                 </div>
-                <div class="item2">
-                    <div class="item-desc">
-                        <a href="#"><img src="resources/img/project-shipsman.com.jpg" alt=""></a>
-                        <p class="project-title">Omega Travel & Leisure</p>
-                        <p class="project-desc">This project was completed for ships management services of Walvis-Bay, utilizing the WordPress CMS platform. This was my first experience using WordPress to build a project. </p>
+                <div class="col span-1-of-3 box">
+                    <img src="resources/img/omega-travel.jpg" alt="omega-travel">
+                    <h3>Omega Travel</h3>
+                    <div class="city-feature">
+                        <i class="icon ion-md-code"></i>
+                        Coded Project
+                    </div>
+                    <div class="city-feature">
+                        <i class="icon ion-logo-html5"></i>
+                        HTML/CSS/JS
+                    </div>
+                    <div class="city-feature">
+                        <i class="icon ion-md-link"></i>
+                        <a class="icon-link" href="#">omegatravel.com</a>
                     </div>
                 </div>
-                <div class="item3">
-                    <div class="item-desc">
-                        <a href="#"><img src="resources/img/project-shipsman.com.jpg" alt=""></a>
-                        <p class="project-title">Omega Travel & Leisure</p>
-                        <p class="project-desc">This project was completed for ships management services of Walvis-Bay, utilizing the WordPress CMS platform. This was my first experience using WordPress to build a project. </p>
+                <div class="col span-1-of-3 box">
+                    <img src="resources/img/js-game.jpg" alt="js-game">
+                    <h3>JS Game</h3>
+                    <div class="city-feature">
+                        <i class="icon ion-md-code"></i>
+                        Coded Project
+                    </div>
+                    <div class="city-feature">
+                        <i class="icon ion-logo-html5"></i>
+                        HTML/CSS/JS
+                    </div>
+                    <div class="city-feature">
+                        <i class="icon ion-md-link"></i>
+                        <a class="icon-link" href="#">vaporwavefall.com</a>
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
+          <section class="section-cities" id="cities">
+            <div class="row">
+                <h2>My newsletters &amp; artwork</h2>
+            </div>
+            <div class="row js--wp-3">
+                <div class="col span-1-of-3 box">
+                    <img src="resources/img/project-shipsman.com.jpg" alt="shipsman">
+                    <h3>Ships Services</h3>
+                    <div class="city-feature">
+                        <i class="ion-ios-person"></i>
+                        WordPress Project
+                    </div>
+                    <div class="city-feature">
+                        <i class="ion-ios-star"></i>
+                        HTML/CSS/JS
+                    </div>
+                    <div class="city-feature">
+                        <i class="icon ion-md-link"></i>
+                        <a class="icon-link" href="#">s</a>
+                    </div>
+                </div>
+                <div class="col span-1-of-3 box">
+                    <img src="resources/img/project-shipsman.com.jpg" alt="omega-travel">
+                    <h3>Omega Travel</h3>
+                    <div class="city-feature">
+                        <i class="ion-ios-person icon-small"></i>
+                        Coded Project
+                    </div>
+                    <div class="city-feature">
+                        <i class="ion-ios-star icon-small"></i>
+                        HTML/CSS/JS
+                    </div>
+                    <div class="city-feature">
+                        <i class="icon ion-md-link"></i>
+                        <a class="icon-link" href="#">@omnifood_sf</a>
+                    </div>
+                </div>
+                <div class="col span-1-of-3 box">
+                    <img src="resources/img/project-shipsman.com.jpg" alt="Alpha-records">
+                    <h3>JS Game</h3>
+                    <div class="city-feature">
+                        <i class="ion-ios-person icon-small"></i>
+                        Coded Project
+                    </div>
+                    <div class="city-feature">
+                        <i class="ion-ios-star icon-small"></i>
+                        HTML/CSS/JS
+                    </div>
+                    <div class="city-feature">
+                        <i class="icon ion-md-link"></i>
+                        <a class="icon-link" href="#">@omnifood_berlin</a>
+                    </div>
+                </div>
+            </div>
         </section>
         <footer class="footer">
-            <p class="footerp">&copy;opyright Nicolai Swanepoel 2019. All Rights</p>
+            <p class="footerp">&copy;Nicolai Swanepoel 2019. All Rights Reserved.</p>
         </footer>
     </body>
 </html>
