--- a/index.html
+++ b/index.html
@@ -42,112 +42,88 @@
             </div>
             </div>
         </header>
-          <section class="section-cities" id="cities">
+          <section class="projects">
             <div class="row">
-                <h2>My previous projects</h2>
+                <h2 class="projects-title">My previous projects</h2>
             </div>
             <div class="row js--wp-3">
                 <div class="col span-1-of-3 box">
                     <img src="resources/img/project-shipsman.com.jpg" alt="shipsman">
                     <h3>Ships Services</h3>
-                    <div class="city-feature">
+                    <div class="project-feature">
                         <i class="icon ion-logo-wordpress"></i>
                         WordPress Project
                     </div>
-                    <div class="city-feature">
+                    <div class="project-feature">
                         <i class="icon ion-logo-html5"></i>
                         HTML/CSS/JS
                     </div>
-                    <div class="city-feature">
+                    <div class="project-feature">
                         <i class="icon ion-md-link"></i>
                         <a class="icon-link" href="http://www.shipsman.com.na">shipsman.com</a>
                     </div>
                 </div>
                 <div class="col span-1-of-3 box">
-                    <img src="resources/img/omega-travel.jpg" alt="omega-travel">
+                    <img src="resources/img/omega-travel.JPG" alt="omega-travel">
                     <h3>Omega Travel</h3>
-                    <div class="city-feature">
+                    <div class="project-feature">
                         <i class="icon ion-md-code"></i>
                         Coded Project
                     </div>
-                    <div class="city-feature">
+                    <div class="project-feature">
                         <i class="icon ion-logo-html5"></i>
                         HTML/CSS/JS
                     </div>
-                    <div class="city-feature">
+                    <div class="project-feature">
                         <i class="icon ion-md-link"></i>
                         <a class="icon-link" href="#">omegatravel.com</a>
                     </div>
                 </div>
                 <div class="col span-1-of-3 box">
-                    <img src="resources/img/js-game.jpg" alt="js-game">
-                    <h3>JS Game</h3>
-                    <div class="city-feature">
+                    <img src="resources/img/js-game.JPG" alt="js-game">
+                    <h3>Javascript Game</h3>
+                    <div class="project-feature">
                         <i class="icon ion-md-code"></i>
                         Coded Project
                     </div>
-                    <div class="city-feature">
+                    <div class="project-feature">
                         <i class="icon ion-logo-html5"></i>
                         HTML/CSS/JS
                     </div>
-                    <div class="city-feature">
+                    <div class="project-feature">
                         <i class="icon ion-md-link"></i>
                         <a class="icon-link" href="#">vaporwavefall.com</a>
                     </div>
                 </div>
             </div>
         </section>
-          <section class="section-cities" id="cities">
+          <section class="projects">
             <div class="row">
                 <h2>My newsletters &amp; artwork</h2>
             </div>
             <div class="row js--wp-3">
                 <div class="col span-1-of-3 box">
-                    <img src="resources/img/project-shipsman.com.jpg" alt="shipsman">
-                    <h3>Ships Services</h3>
-                    <div class="city-feature">
-                        <i class="ion-ios-person"></i>
-                        WordPress Project
-                    </div>
-                    <div class="city-feature">
-                        <i class="ion-ios-star"></i>
-                        HTML/CSS/JS
-                    </div>
-                    <div class="city-feature">
-                        <i class="icon ion-md-link"></i>
-                        <a class="icon-link" href="#">s</a>
+                    <img src="resources/img/Fashion_Template-2.jpg" alt="fashion-newsletter">
+                    <h3>Fashion Newsletter</h3>
+                    <div class="project-feature">
+                        <i class="icon ion-md-image"></i>
+                        Adobe Photoshop
                     </div>
                 </div>
                 <div class="col span-1-of-3 box">
-                    <img src="resources/img/project-shipsman.com.jpg" alt="omega-travel">
-                    <h3>Omega Travel</h3>
-                    <div class="city-feature">
-                        <i class="ion-ios-person icon-small"></i>
-                        Coded Project
-                    </div>
-                    <div class="city-feature">
-                        <i class="ion-ios-star icon-small"></i>
-                        HTML/CSS/JS
-                    </div>
-                    <div class="city-feature">
-                        <i class="icon ion-md-link"></i>
-                        <a class="icon-link" href="#">@omnifood_sf</a>
+                    <img class="image" src="resources/img/Fashion_Template.jpg" alt="fashion-newsletter">
+                    <h3>Fashion newsletter</h3>
+                    <div class="project-feature">
+                        <i class="icon ion-md-image"></i>
+                        Adobe Photoshop
                     </div>
                 </div>
                 <div class="col span-1-of-3 box">
-                    <img src="resources/img/project-shipsman.com.jpg" alt="Alpha-records">
-                    <h3>JS Game</h3>
-                    <div class="city-feature">
-                        <i class="ion-ios-person icon-small"></i>
-                        Coded Project
-                    </div>
-                    <div class="city-feature">
-                        <i class="ion-ios-star icon-small"></i>
-                        HTML/CSS/JS
-                    </div>
-                    <div class="city-feature">
-                        <i class="icon ion-md-link"></i>
-                        <a class="icon-link" href="#">@omnifood_berlin</a>
+                    <img src="resources/img/Fashion_Template-3.jpg" alt="fashion-newsletter">
+                    <h3>Fashion newsletter</h3>
+                    <div class="project-feature">
+                        <i class="icon ion-md-image"></i>
+                        Adobe Photoshop
                     </div>
                 </div>
             </div>
